--- a/cphoto.ui
+++ b/cphoto.ui
@@ -45,7 +45,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Open</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>LeftButtons</string>
@@ -61,7 +61,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Exit</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>RightButtons</string>
@@ -87,7 +87,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>+</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>RightButtons</string>
@@ -103,7 +103,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>-</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>RightButtons</string>
@@ -119,7 +119,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>←</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>RightButtons</string>
@@ -135,7 +135,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>→</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>RightButtons</string>
@@ -151,7 +151,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>©</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>LeftButtons</string>
@@ -167,7 +167,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>X</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>LeftButtons</string>
