--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>283</width>
-    <height>292</height>
+    <height>344</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>250</y>
+     <y>300</y>
      <width>161</width>
      <height>25</height>
     </rect>
@@ -32,8 +32,8 @@
   <widget class="QPushButton" name="Default_Btn">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>250</y>
+     <x>10</x>
+     <y>300</y>
      <width>91</width>
      <height>24</height>
     </rect>
@@ -53,7 +53,7 @@
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="label_color">
       <property name="text">
        <string>Choose Color</string>
       </property>
@@ -160,6 +160,29 @@
    </property>
    <property name="text">
     <string>Music Manager</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>250</y>
+     <width>157</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Choose Language</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="LangCmbBox">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>250</y>
+     <width>111</width>
+     <height>24</height>
+    </rect>
    </property>
   </widget>
  </widget>
