--- a/settingsdlg.ui
+++ b/settingsdlg.ui
@@ -80,17 +80,17 @@
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
    </property>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="label_timer">
     <property name="text">
      <string>SlideShow timer</string>
     </property>
    </widget>
    <widget class="QSpinBox" name="spinSec"/>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="label_font">
    <property name="geometry">
     <rect>
-     <x>33</x>
+     <x>30</x>
      <y>70</y>
      <width>113</width>
      <height>24</height>
@@ -123,7 +123,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="label_fade">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -149,7 +149,7 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="label_music">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -162,7 +162,7 @@
     <string>Music Manager</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_6">
+  <widget class="QLabel" name="label_lang">
    <property name="geometry">
     <rect>
      <x>30</x>
