--- a/collectiondlg.ui
+++ b/collectiondlg.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>449</height>
+    <height>766</height>
    </rect>
   </property>
   <property name="contextMenuPolicy">
@@ -22,7 +22,7 @@
      <x>10</x>
      <y>10</y>
      <width>381</width>
-     <height>211</height>
+     <height>171</height>
     </rect>
    </property>
   </widget>
@@ -30,13 +30,109 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>220</y>
+     <y>180</y>
      <width>381</width>
-     <height>192</height>
+     <height>191</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QFrame" name="frame">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>380</y>
+     <width>371</width>
+     <height>311</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QLabel" name="preView">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>371</width>
+      <height>311</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QPushButton" name="loadBtn">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>730</y>
+     <width>80</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>load</string>
+   </property>
+   <attribute name="buttonGroup">
+    <string>buttons</string>
+   </attribute>
+  </widget>
+  <widget class="QPushButton" name="delBtn">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>730</y>
+     <width>80</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>del</string>
+   </property>
+   <attribute name="buttonGroup">
+    <string>buttons</string>
+   </attribute>
+  </widget>
+  <widget class="QPushButton" name="appendBtn">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>730</y>
+     <width>80</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Append</string>
+   </property>
+   <attribute name="buttonGroup">
+    <string>buttons</string>
+   </attribute>
+  </widget>
+  <widget class="QPushButton" name="AppendAllBtn">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>730</y>
+     <width>80</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Append all</string>
+   </property>
+   <attribute name="buttonGroup">
+    <string>buttons</string>
+   </attribute>
   </widget>
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttons"/>
+ </buttongroups>
 </ui>
