--- a/collectiondlg.ui
+++ b/collectiondlg.ui
@@ -70,12 +70,12 @@
     <rect>
      <x>10</x>
      <y>730</y>
-     <width>80</width>
-     <height>25</height>
+     <width>94</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>load</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>buttons</string>
@@ -84,14 +84,14 @@
   <widget class="QPushButton" name="delBtn">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>120</x>
      <y>730</y>
-     <width>80</width>
-     <height>25</height>
+     <width>94</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>del</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>buttons</string>
@@ -100,7 +100,7 @@
   <widget class="QPushButton" name="appendBtn">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>230</x>
      <y>730</y>
      <width>80</width>
      <height>25</height>
