--- a/collectiondlg.ui
+++ b/collectiondlg.ui
@@ -84,7 +84,7 @@
   <widget class="QPushButton" name="delBtn">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>290</x>
      <y>730</y>
      <width>94</width>
      <height>31</height>
@@ -100,30 +100,14 @@
   <widget class="QPushButton" name="appendBtn">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>150</x>
      <y>730</y>
-     <width>80</width>
-     <height>25</height>
+     <width>94</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Append</string>
-   </property>
-   <attribute name="buttonGroup">
-    <string>buttons</string>
-   </attribute>
-  </widget>
-  <widget class="QPushButton" name="AppendAllBtn">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>730</y>
-     <width>80</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Append all</string>
+    <string/>
    </property>
    <attribute name="buttonGroup">
     <string>buttons</string>
