--- a/collectiondlg.ui
+++ b/collectiondlg.ui
@@ -100,7 +100,7 @@
   <widget class="QPushButton" name="appendBtn">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>100</x>
      <y>730</y>
      <width>94</width>
      <height>31</height>
@@ -112,6 +112,19 @@
    <attribute name="buttonGroup">
     <string>buttons</string>
    </attribute>
+  </widget>
+  <widget class="QPushButton" name="saveBtn">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>730</y>
+     <width>94</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
  </widget>
  <resources/>
